Refactor: Restructure projects for improved modularity and naming consistency
重構專案以提升模組化及命名一致性：
- 調整命名空間及目錄結構，新增 Persistence.Repositories 及 Persistence.Metadata.SampleDb 目錄
- 將 Observability 模組遷移至 CrossCutting.Observability 目錄並更新相關引用
- 更新所有專案檔及 Dockerfile 中的路徑和引用
- 調整解決方案檔中的專案分組，確保命名一致性

--- a/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
+++ b/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\dotnetLab.UseCases\dotnetLab.UseCases.csproj" />
-    <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
+    <ProjectReference Include="..\dotnetLab.Persistence.Repositories\dotnetLab.Persistence.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
