--- a/src/dotnetLab.UseCases/dotnetLab.UseCases.csproj
+++ b/src/dotnetLab.UseCases/dotnetLab.UseCases.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dotnetLab.Observability\dotnetLab.Observability.csproj" />
+    <ProjectReference Include="..\dotnetLab.CrossCutting.Observability\dotnetLab.CrossCutting.Observability.csproj" />
     <ProjectReference Include="..\dotnetLab.Domains\dotnetLab.Domains.csproj" />
   </ItemGroup>
 
