--- a/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
+++ b/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\dotnetLab.Database.SampleDb\dotnetLab.Database.SampleDb.csproj" />
-    <ProjectReference Include="..\dotnetLab.Repository\dotnetLab.Repository.csproj" />
+    <ProjectReference Include="..\dotnetLab.Persistence.Metadata.SampleDb\dotnetLab.Persistence.Metadata.SampleDb.csproj" />
+    <ProjectReference Include="..\dotnetLab.Persistence.Repositories\dotnetLab.Persistence.Repositories.csproj" />
     <ProjectReference Include="..\dotnetLab.UseCases\dotnetLab.UseCases.csproj" />
   </ItemGroup>
 </Project>
