--- a/src/dotnetLab.Domains/dotnetLab.Domains.csproj
+++ b/src/dotnetLab.Domains/dotnetLab.Domains.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\dotnetLab.SharedKernel\dotnetLab.SharedKernel.csproj" />
+      <ProjectReference Include="..\dotnetLab.BuildingBlocks\dotnetLab.BuildingBlocks.csproj" />
     </ItemGroup>
 
 </Project>
