--- a/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
+++ b/src/dotnetLab.GrpcService/dotnetLab.GrpcService.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\.dockerignore">
+    <Content Include="..\..\.dockerignore">
       <Link>.dockerignore</Link>
     </Content>
   </ItemGroup>
