--- a/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
+++ b/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\.dockerignore">
+    <Content Include="..\..\.dockerignore">
       <Link>.dockerignore</Link>
     </Content>
   </ItemGroup>
