--- a/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
+++ b/src/dotnetLab.WebApi/dotnetLab.WebApi.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.7.2" />
     <PackageReference Include="WolverineFx" Version="4.10.0" />
