調整 lab api 中的 auth 設定

--- a/src/dotnetLab.WebApi/appsettings.json
+++ b/src/dotnetLab.WebApi/appsettings.json
@@ -12,9 +12,9 @@
   },
   "AllowedHosts": "*",
   "Auth": {
-    "Authority": "http://localhost:8080/realms/master",
-    "AuthorizationEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/auth",
-    "TokenEndpoint":"http://localhost:8080/realms/master/protocol/openid-connect/token",
+    "Authority": "http://host.docker.internal:8080/realms/master",
+    "AuthorizationEndpoint":"http://host.docker.internal:8080/realms/master/protocol/openid-connect/auth",
+    "TokenEndpoint":"http://host.docker.internal:8080/realms/master/protocol/openid-connect/token",
     "ClientId": "test_client",
     "ClientSecret": "6ZyOGaalxmk0NIZCg9w81lIU9bxnDL4P",
     "Audience": "lab_api"
